Lägg till funktionalitet för att beräkna värdeår utifrån hyra

--- a/Projektinlämning_del_1/Notebook.ipynb
+++ b/Projektinlämning_del_1/Notebook.ipynb
@@ -4,21 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Projektinlämning del 1 - Beskrivning av problemet\n",
+    "Projektinlämning del 1 - Beskrivning av problem\n",
     "\n",
-    "Många som hyr sin bostad undrar om de betalar för mycket i hyra för sin bostad. För att få veta om de betalar mycket eller lite i hyra jämfört med liknande hyresbostäder låter vi maskin inlärning läsa in och processa data gällande genomsnittshyror för hyresrätter 2022-2024 för hela riket, från Skatteverket och baserat på data besluta om den nuvarande hyran är för hög eller låg beroende på bostadens värdeår. Då den ansvarige för Skatteverkets CSV-fil är på semester och dokumentation för filen saknas så kan tyvärr inte hänsyn tas till värdeområdes-numrena. Dessa skulle idealt ha mappats till ett område och tagits hänsyn till i förutsägelsen om hyrans storlek.\n",
+    "1. Många som hyr sin bostad undrar om de betalar för mycket i hyra för sin bostad. För att få veta om de betalar mycket eller lite i hyra jämfört med liknande hyresbostäder låter vi maskin inlärning läsa in och processa data gällande genomsnittshyror för hyresrätter 2022-2024 för hela riket. Datan kommer från Skatteverket. Baserat på datan låter vi maskinen besluta om den nuvarande hyran är mycket låg, låg, medelhög, hög eller mycket hög beroende på bostadens värdeår. \n",
     "\n",
-    "Vi gör detta till ett klassifficeringsproblem där vi vill stoppa in hyran i en av kategorierna\n",
-    "Mycket låg,\n",
+    "(Då den ansvarige för Skatteverkets CSV-fil är på semester och dokumentation för filen saknas så kan tyvärr inte hänsyn tas till värdeområdes-numrena. Dessa skulle idealt ha mappats till ett område och tagits hänsyn till i förutsägelsen om hyrans storlek.)\n",
+    "\n",
+    "Indata\n",
+    "Månadshyra\n",
+    "Antal kvadratmeter\n",
+    "Värdeår\n",
+    "\n",
+    "Vi gör detta till ett klassifficeringsproblem där vi vill få ut en hyresnivå tillhörande en av kategorierna\n",
+    "Mycket låg\n",
     "Låg\n",
     "Medel\n",
     "Hög\n",
     "Mycket hög\n",
     "\n",
-    "Beskrivning av datan\n",
+    "2. Om användaren vill veta vilket värdeår bostaden bör tillhöra, beroende på hyresnivån och antalet kvadratmeter bostaden är, kan denne göra detta genom att sätta värdeåret till None.\n",
+    "Om angiven bostad får en hyra med medelhög nivå för något värdeår används detta värdeår. Om flera värdeår matchar hyran ges det äldsta värdeåret som sannolikt värdeår, för att inte göra användaren besviken i onödan.\n",
+    "\n",
+    "Input från användaren, hårdkodat i koden nedanför då input inte funkade in notebooks av någon anledning:\n",
+    "Månadshyra\n",
+    "Antal kvadratmeter\n",
+    "\n",
+    "Utdata\n",
+    "Värdeår\n",
+    "\n",
+    "Beskrivning av datan i Skatteverkets CSV-fil\n",
     "Värdeår_XYZW är fastighetens värdeår, vilket normalt sett innebär det år då fastigheten färdigställdes.\n",
-    "Talen är kr/(år ich kvm) i hyra\n",
-    "\n"
+    "Talen är kr/(år och kvm) i hyra"
    ]
   },
   {
@@ -40,7 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ranges = [10, 35, 65, 90]\n",
+    "rentLevels = ['Mycket låg', 'Låg', 'Medelhög', 'Hög', 'Mycket hög']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -54,9 +80,6 @@
    "source": [
     "import pandas\n",
     "import numpy as np\n",
-    "\n",
-    "ranges = [10, 35, 65, 90]\n",
-    "rentLevels = ['Mycket låg', 'Låg', 'Medelhög', 'Hög', 'Mycket hög']\n",
     "\n",
     "skvData = pandas.read_csv('Data/SKV_Genomsnittshyra_bostad_2022-2024.csv')\n",
     "\n",
@@ -82,21 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[805.0, 910.0, 1000.0, 1135.0]\n",
-      "[[805.0, 910.0, 1000.0, 1135.0]]\n",
-      "805.0\n",
-      "910.0\n",
-      "1000.0\n",
-      "1135.0\n",
-      "5\n",
-      "Din angivna hyra och antal kvadratmeter resulterade i bedömningen att din hyra jämfört med rikets hyresnivåer är: Mycket hög\n"
+      "[1350.0, 1525.0, 1700.0, 1975.0]\n",
+      "GetRentLevel: [1350.0, 1525.0, 1700.0, 1975.0]\n",
+      "rentPerSqm <= value: 1525.0\n",
+      "Din angivna hyra och antal kvadratmeter resulterade i bedömningen att din hyra jämfört med rikets hyresnivåer är: Låg\n"
      ]
     }
    ],
@@ -105,15 +124,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# Beräkna om hyran är mycket låg, låg, medel, hög eller mycket hög, jämfört med rikets prisnivåer och givet värdeår\n",
-    "\n",
-    "# input kan ej köras genom ipynb, så isf får koden köra i separat program\n",
-    "# rent = input(\"Ange din månadshyra i SEK: \")\n",
-    "# sqm = input(\"Ange bostadens storlek i kvadratmeter: \")\n",
-    "# builtYear = input(\"Ange det år din bostad är byggd: \")\n",
+    "# Input från användaren\n",
     "rent = 10000\n",
     "sqm = 87\n",
-    "builtYear = 1964\n",
+    "builtYear = 2020\n",
     "\n",
     "def CalculateSqmYearlyRent(numSqm, actualMonthlyRent):\n",
     "    return actualMonthlyRent*12/numSqm\n",
@@ -165,6 +179,35 @@
     "    print(rentLimits)\n",
     "    return rentLimits\n",
     "\n",
+    "def GetPotentialRentLevels(valueYears, rentRanges, rentPerSqm):\n",
+    "    rentLevelsPerValueYear = {}\n",
+    "\n",
+    "    for i, valueYearRow in enumerate(rentRanges):\n",
+    "        print(f'ValueYearRow: {valueYearRow}')\n",
+    "        print(valueYears[i])\n",
+    "        level = GetRentLevel(valueYearRow, rentPerSqm)\n",
+    "        print(f'{level}')\n",
+    "        rentLevelsPerValueYear[f'{valueYears[i]}'] = level\n",
+    "\n",
+    "    print(rentLevelsPerValueYear)\n",
+    "    return rentLevelsPerValueYear\n",
+    "\n",
+    "def GetRentLevel(rentRanges, rentPerSqm):\n",
+    "    level = None\n",
+    "    print(f'GetRentLevel: {rentRanges}')\n",
+    "    for i, value in enumerate(rentRanges):\n",
+    "        if(rentPerSqm <= value):\n",
+    "            print(f'rentPerSqm <= value: {value}')\n",
+    "            level = rentLevels[i]\n",
+    "            break\n",
+    "\n",
+    "    if(level is None):\n",
+    "    # Hyran var alltså inte lägre än någon av gränsvärdena, alltså tillhör den de högsta 10% av hyror\n",
+    "        print(f'Det var en hög hyra!')\n",
+    "        level = rentLevels[len(rentLevels)-1]\n",
+    "\n",
+    "    return level\n",
+    "\n",
     "# Om användaren inputtar ett givet värdeår så använder vi enbart det värdeåret, men om användaren \n",
     "# INTE inputtar något värdeår så uppskattar vi istället vilket värdeår användarens bostad sannolikt tillhör\n",
     "rentRanges = []\n",
@@ -172,36 +215,28 @@
     "    for i, value in enumerate(valueYears):\n",
     "        column = GetRentPerYearPerSqmColumn(value, skvData)\n",
     "        rentRanges.append(CalculateRentRanges(column))\n",
+    "    #print(rentRanges)\n",
+    "\n",
+    "    potentialRentLevels = GetPotentialRentLevels(valueYears, rentRanges, rentPerSqm)\n",
+    "\n",
+    "    mediumRent = rentLevels[2]\n",
+    "\n",
+    "    valueYearsWithMediumRentLevel = [k for k, v in potentialRentLevels.items() if v == mediumRent]\n",
+    "    print(valueYearsWithMediumRentLevel)\n",
+    "    # Om där finns flera som matchar, så väljer vi att ange det första, dvs älsta, byggåret (värdeåret) för att inte göra användaren besviken i onödan\n",
+    "    print(f'Din angivna hyra och antal kvadratmeter resulterade i bedömningen att din hyresrätt gissningsvis är av värdeår: {valueYearsWithMediumRentLevel[0]}')\n",
+    "\n",
     "else:    \n",
     "    column = GetRentPerYearPerSqmColumn(builtYear, skvData)\n",
     "    rentRanges.append(CalculateRentRanges(column))\n",
     "\n",
-    "# Jämför hyran för givet värdeår med hyresnivån i riket\n",
-    "print(rentRanges)\n",
-    "\n",
-    "rentLevel = None\n",
-    "\n",
-    "for i, value in enumerate(rentRanges[0]):\n",
-    "    print(f'{value}')\n",
-    "    if(rentPerSqm <= value):\n",
-    "        rentLevel = rentLevels[i]\n",
-    "        break\n",
-    "if(rentLevel is None):\n",
-    "    # Hyran var alltså inte lägre än någon av gränsvärdena, alltså tillhör den de högsta 10% av hyror\n",
-    "    print(f'{len(rentLevels)}')\n",
-    "    rentLevel = rentLevels[len(rentLevels)-1]\n",
+    "    # Jämför hyran för givet värdeår med hyresnivån i riket\n",
+    "    #print(rentRanges)\n",
+    "    rentLevel = GetRentLevel(rentRanges[0], rentPerSqm)\n",
     "    \n",
-    "print(f'Din angivna hyra och antal kvadratmeter resulterade i bedömningen att din hyra jämfört med rikets hyresnivåer är: {rentLevel}')\n",
-    "        \n",
-    "    # elif(i == len(rentRanges) - 1):\n",
+    "    print(f'Din angivna hyra och antal kvadratmeter resulterade i bedömningen att din hyra jämfört med rikets hyresnivåer är: {rentLevel}')\n",
     "\n",
-    "    # else:\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "# Kör testet på testdata från Skatteverket\n",
     "# sqm_price_X_train, sqm_price_X_test, sqm_price_y_train, sqm_price_y_test = train_test_split(male_X, male_y, test_size = 0.2, random_state= 42\n"
    ]
   },
