Flytta runt lite

--- a/Projektinlämning_del_1/Notebook.ipynb
+++ b/Projektinlämning_del_1/Notebook.ipynb
@@ -105,6 +105,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import matplotlib.pyplot as plt\n",
+    "\n",
+    "# # First let us define a dict to match a rent-level to a color\n",
+    "# colors = {\n",
+    "#     'Mycket låg': 'blue',\n",
+    "#     'Låg': 'green',\n",
+    "#     'Medium': 'yellow',\n",
+    "#     'Hög': 'orange',\n",
+    "#     'Mycket hög': 'red',\n",
+    "# }\n",
+    "\n",
+    "# # Create plots for each built year\n",
+    "# fig, axes = plt.subplots(nrows=2, figsize=(10, 12))\n",
+    "\n",
+    "# for ax, gender_data, gender in zip(axes, [skvData], [\"Data\"]):\n",
+    "#     for size, color in colors.items():\n",
+    "#         # Filter data by size\n",
+    "#         size_data = gender_data[gender_data[\"t-shirt size\"] == size]\n",
+    "\n",
+    "#         # Plot data\n",
+    "#         ax.scatter(size_data[\"weightkg\"], size_data[\"stature\"], c=color, label=size, alpha=0.5)\n",
+    "\n",
+    "#     ax.set_title(gender)\n",
+    "#     ax.set_xlabel(\"Year built\")\n",
+    "#     ax.set_ylabel(\"Rent in SEK/(Sqm and year)\")\n",
+    "#     ax.legend()\n",
+    "\n",
+    "# plt.tight_layout()\n",
+    "# plt.show()\n",
+    "\n",
+    "# skvData"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 138,
    "metadata": {},
    "outputs": [
@@ -234,10 +273,7 @@
     "    #print(rentRanges)\n",
     "    rentLevel = GetRentLevel(rentRanges[0], rentPerSqm)\n",
     "    \n",
-    "    print(f'Din angivna hyra och antal kvadratmeter resulterade i bedömningen att din hyra jämfört med rikets hyresnivåer är: {rentLevel}')\n",
-    "\n",
-    "# Kör testet på testdata från Skatteverket\n",
-    "# sqm_price_X_train, sqm_price_X_test, sqm_price_y_train, sqm_price_y_test = train_test_split(male_X, male_y, test_size = 0.2, random_state= 42\n"
+    "    print(f'Din angivna hyra, antal kvadratmeter och angivet värdeår resulterade i bedömningen att din hyra jämfört med rikets hyresnivåer är: {rentLevel}')\n"
    ]
   },
   {
@@ -246,37 +282,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# First let us define a dict to match a rent-level to a color\n",
-    "colors = {\n",
-    "    'Mycket låg': 'blue',\n",
-    "    'Låg': 'green',\n",
-    "    'Medium': 'yellow',\n",
-    "    'Hög': 'orange',\n",
-    "    'Mycket hög': 'red',\n",
-    "}\n",
-    "\n",
-    "# Create plots for each built year\n",
-    "fig, axes = plt.subplots(nrows=2, figsize=(10, 12))\n",
-    "\n",
-    "for ax, gender_data, gender in zip(axes, [skvData], [\"Data\"]):\n",
-    "    for size, color in colors.items():\n",
-    "        # Filter data by size\n",
-    "        size_data = gender_data[gender_data[\"t-shirt size\"] == size]\n",
-    "\n",
-    "        # Plot data\n",
-    "        ax.scatter(size_data[\"weightkg\"], size_data[\"stature\"], c=color, label=size, alpha=0.5)\n",
-    "\n",
-    "    ax.set_title(gender)\n",
-    "    ax.set_xlabel(\"Year built\")\n",
-    "    ax.set_ylabel(\"Rent in SEK/(Sqm and year)\")\n",
-    "    ax.legend()\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "skvData"
+    "# Kör testet på testdata från Skatteverket\n",
+    "# sqm_price_X_train, sqm_price_X_test, sqm_price_y_train, sqm_price_y_test = train_test_split(male_X, male_y, test_size = 0.2, random_state= 42"
    ]
   }
  ],
