--- a/Projektinlämning_del_1/Notebook.ipynb
+++ b/Projektinlämning_del_1/Notebook.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "Projektinlämning del 1 - Beskrivning av problem\n",
     "\n",
-    "1. Många som hyr sin bostad undrar om de betalar för mycket i hyra för sin bostad. För att få veta om de betalar mycket eller lite i hyra jämfört med liknande hyresbostäder låter vi maskin inlärning läsa in och processa data gällande genomsnittshyror för hyresrätter 2022-2024 för hela riket. Datan kommer från Skatteverket. Baserat på datan låter vi maskinen besluta om den nuvarande hyran är mycket låg, låg, medelhög, hög eller mycket hög beroende på bostadens värdeår. \n",
+    "1. Klassificeringsproblem.\n",
+    "Många som hyr sin bostad undrar om de betalar för mycket i hyra för sin bostad. För att få veta om de betalar mycket eller lite i hyra jämfört med liknande hyresbostäder låter vi maskin inlärning läsa in och processa data gällande genomsnittshyror för hyresrätter 2022-2024 för hela riket. Datan kommer från Skatteverket. Baserat på datan låter vi maskinen besluta om den nuvarande hyran är mycket låg, låg, medelhög, hög eller mycket hög beroende på bostadens värdeår. \n",
     "\n",
     "(Då den ansvarige för Skatteverkets CSV-fil är på semester och dokumentation för filen saknas så kan tyvärr inte hänsyn tas till värdeområdes-numrena. Dessa skulle idealt ha mappats till ett område och tagits hänsyn till i förutsägelsen om hyrans storlek.)\n",
     "\n",
@@ -22,7 +23,8 @@
     "Hög\n",
     "Mycket hög\n",
     "\n",
-    "2. Om användaren vill veta vilket värdeår bostaden bör tillhöra, beroende på hyresnivån och antalet kvadratmeter bostaden är, kan denne göra detta genom att sätta värdeåret till None.\n",
+    "2. Klassificeringsproblem.\n",
+    "Om användaren vill veta vilket värdeår bostaden bör tillhöra, beroende på hyresnivån och antalet kvadratmeter bostaden är, kan denne göra detta genom att sätta värdeåret till None.\n",
     "Om angiven bostad får en hyra med medelhög nivå för något värdeår används detta värdeår. Om flera värdeår matchar hyran ges det äldsta värdeåret som sannolikt värdeår, för att inte göra användaren besviken i onödan.\n",
     "\n",
     "Input från användaren, hårdkodat i koden nedanför då input inte funkade in notebooks av någon anledning:\n",
@@ -109,64 +111,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# # First let us define a dict to match a rent-level to a color\n",
-    "# colors = {\n",
-    "#     'Mycket låg': 'blue',\n",
-    "#     'Låg': 'green',\n",
-    "#     'Medium': 'yellow',\n",
-    "#     'Hög': 'orange',\n",
-    "#     'Mycket hög': 'red',\n",
-    "# }\n",
+    "# Match rent-level to a color\n",
+    "colors = {\n",
+    "    'Mycket låg': 'blue',\n",
+    "    'Låg': 'green',\n",
+    "    'Medelhög': 'yellow',\n",
+    "    'Hög': 'orange',\n",
+    "    'Mycket hög': 'red',\n",
+    "}\n",
     "\n",
-    "# # Create plots for each built year\n",
-    "# fig, axes = plt.subplots(nrows=2, figsize=(10, 12))\n",
+    "# Create plots for each built year\n",
+    "fig, axes = plt.subplots(nrows=2, figsize=(10, 12))\n",
     "\n",
-    "# for ax, gender_data, gender in zip(axes, [skvData], [\"Data\"]):\n",
-    "#     for size, color in colors.items():\n",
-    "#         # Filter data by size\n",
-    "#         size_data = gender_data[gender_data[\"t-shirt size\"] == size]\n",
+    "for ax, gender_data, gender in zip(axes, [skvData], [\"Data\"]):\n",
+    "    for size, color in colors.items():\n",
+    "        # Filter data by size\n",
+    "        size_data = gender_data[gender_data[\"t-shirt size\"] == size]\n",
     "\n",
-    "#         # Plot data\n",
-    "#         ax.scatter(size_data[\"weightkg\"], size_data[\"stature\"], c=color, label=size, alpha=0.5)\n",
+    "        # Plot data\n",
+    "        ax.scatter(size_data[\"weightkg\"], size_data[\"stature\"], c=color, label=size, alpha=0.5)\n",
     "\n",
-    "#     ax.set_title(gender)\n",
-    "#     ax.set_xlabel(\"Year built\")\n",
-    "#     ax.set_ylabel(\"Rent in SEK/(Sqm and year)\")\n",
-    "#     ax.legend()\n",
+    "    ax.set_title(gender)\n",
+    "    ax.set_xlabel(\"Year built\")\n",
+    "    ax.set_ylabel(\"Rent in SEK/(Sqm and year)\")\n",
+    "    ax.legend()\n",
     "\n",
-    "# plt.tight_layout()\n",
-    "# plt.show()\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
     "\n",
-    "# skvData"
+    "skvData"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1350.0, 1525.0, 1700.0, 1975.0]\n",
-      "GetRentLevel: [1350.0, 1525.0, 1700.0, 1975.0]\n",
-      "rentPerSqm <= value: 1525.0\n",
-      "Din angivna hyra och antal kvadratmeter resulterade i bedömningen att din hyra jämfört med rikets hyresnivåer är: Låg\n"
+      "Din angivna hyra och antal kvadratmeter resulterade i bedömningen att din hyresrätt gissningsvis är av värdeår: 2007\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
     "# Input från användaren\n",
     "rent = 10000\n",
     "sqm = 87\n",
-    "builtYear = 2020\n",
+    "builtYear = None#2020\n",
     "\n",
     "def CalculateSqmYearlyRent(numSqm, actualMonthlyRent):\n",
     "    return actualMonthlyRent*12/numSqm\n",
@@ -215,65 +210,86 @@
     "    rentLimits = []\n",
     "    for i, value in enumerate(ranges):\n",
     "        rentLimits.append(dataColumn.quantile(value/100))\n",
-    "    print(rentLimits)\n",
+    "    #print(rentLimits)\n",
     "    return rentLimits\n",
     "\n",
     "def GetPotentialRentLevels(valueYears, rentRanges, rentPerSqm):\n",
     "    rentLevelsPerValueYear = {}\n",
     "\n",
     "    for i, valueYearRow in enumerate(rentRanges):\n",
-    "        print(f'ValueYearRow: {valueYearRow}')\n",
-    "        print(valueYears[i])\n",
+    "        #print(f'ValueYearRow: {valueYearRow}')\n",
+    "        #print(valueYears[i])\n",
     "        level = GetRentLevel(valueYearRow, rentPerSqm)\n",
-    "        print(f'{level}')\n",
+    "        #print(f'{level}')\n",
     "        rentLevelsPerValueYear[f'{valueYears[i]}'] = level\n",
     "\n",
-    "    print(rentLevelsPerValueYear)\n",
+    "    #print(rentLevelsPerValueYear)\n",
     "    return rentLevelsPerValueYear\n",
     "\n",
     "def GetRentLevel(rentRanges, rentPerSqm):\n",
     "    level = None\n",
-    "    print(f'GetRentLevel: {rentRanges}')\n",
+    "    #print(f'GetRentLevel: {rentRanges}')\n",
     "    for i, value in enumerate(rentRanges):\n",
     "        if(rentPerSqm <= value):\n",
-    "            print(f'rentPerSqm <= value: {value}')\n",
+    "            #print(f'rentPerSqm <= value: {value}')\n",
     "            level = rentLevels[i]\n",
     "            break\n",
     "\n",
     "    if(level is None):\n",
     "    # Hyran var alltså inte lägre än någon av gränsvärdena, alltså tillhör den de högsta 10% av hyror\n",
-    "        print(f'Det var en hög hyra!')\n",
+    "        #print(f'Det var en hög hyra!')\n",
     "        level = rentLevels[len(rentLevels)-1]\n",
     "\n",
     "    return level\n",
     "\n",
-    "# Om användaren inputtar ett givet värdeår så använder vi enbart det värdeåret, men om användaren \n",
-    "# INTE inputtar något värdeår så uppskattar vi istället vilket värdeår användarens bostad sannolikt tillhör\n",
-    "rentRanges = []\n",
-    "if(builtYear is None):\n",
-    "    for i, value in enumerate(valueYears):\n",
-    "        column = GetRentPerYearPerSqmColumn(value, skvData)\n",
-    "        rentRanges.append(CalculateRentRanges(column))\n",
-    "    #print(rentRanges)\n",
-    "\n",
-    "    potentialRentLevels = GetPotentialRentLevels(valueYears, rentRanges, rentPerSqm)\n",
-    "\n",
-    "    mediumRent = rentLevels[2]\n",
-    "\n",
-    "    valueYearsWithMediumRentLevel = [k for k, v in potentialRentLevels.items() if v == mediumRent]\n",
-    "    print(valueYearsWithMediumRentLevel)\n",
-    "    # Om där finns flera som matchar, så väljer vi att ange det första, dvs älsta, byggåret (värdeåret) för att inte göra användaren besviken i onödan\n",
-    "    print(f'Din angivna hyra och antal kvadratmeter resulterade i bedömningen att din hyresrätt gissningsvis är av värdeår: {valueYearsWithMediumRentLevel[0]}')\n",
-    "\n",
-    "else:    \n",
+    "def ClassifyRent(builtYear, rentPerSqm):\n",
     "    column = GetRentPerYearPerSqmColumn(builtYear, skvData)\n",
     "    rentRanges.append(CalculateRentRanges(column))\n",
     "\n",
     "    # Jämför hyran för givet värdeår med hyresnivån i riket\n",
     "    #print(rentRanges)\n",
     "    rentLevel = GetRentLevel(rentRanges[0], rentPerSqm)\n",
+    "\n",
+    "    return rentLevel\n",
+    "\n",
+    "def FindProbableValueYear():\n",
+    "    for i, value in enumerate(valueYears):\n",
+    "        column = GetRentPerYearPerSqmColumn(value, skvData)\n",
+    "        rentRanges.append(CalculateRentRanges(column))\n",
+    "    \n",
+    "    #print(rentRanges)\n",
+    "    potentialRentLevels = GetPotentialRentLevels(valueYears, rentRanges, rentPerSqm)\n",
+    "\n",
+    "    mediumRent = rentLevels[2]\n",
+    "\n",
+    "    valueYearsWithMediumRentLevel = [k for k, v in potentialRentLevels.items() if v == mediumRent]\n",
+    "    #print(valueYearsWithMediumRentLevel)\n",
+    "\n",
+    "    if(len(valueYearsWithMediumRentLevel) > 0):\n",
+    "        return valueYearsWithMediumRentLevel[0]\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "# Om användaren inputtar ett givet värdeår så använder vi enbart det värdeåret och klassificerar hyresnivån, men om användaren \n",
+    "# INTE inputtar något värdeår så uppskattar vi istället vilket värdeår användarens bostad sannolikt tillhör\n",
+    "rentRanges = []\n",
+    "if(builtYear is None):\n",
+    "    valueYearsWithMediumRentLevel = FindProbableValueYear()\n",
+    "    print(f'Din angivna hyra och antal kvadratmeter resulterade i bedömningen att din hyresrätt gissningsvis är av värdeår: {valueYearsWithMediumRentLevel}')\n",
+    "\n",
+    "else:    \n",
+    "    rentLevel = ClassifyRent(builtYear, rentPerSqm)\n",
     "    \n",
     "    print(f'Din angivna hyra, antal kvadratmeter och angivet värdeår resulterade i bedömningen att din hyra jämfört med rikets hyresnivåer är: {rentLevel}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testa resultatet\n",
+    "\n",
+    "Eftersom det är jag som har klassificerat hyresnivåerna samt tar fram värdeåret så har jag ingen \"sanning\" att kontrollera emot. Därför är testet nedanför inte givande och utkommenterat."
    ]
   },
   {
@@ -282,9 +298,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# Kör testet på testdata från Skatteverket\n",
-    "# sqm_price_X_train, sqm_price_X_test, sqm_price_y_train, sqm_price_y_test = train_test_split(male_X, male_y, test_size = 0.2, random_state= 42"
+    "# # Kör testet på testdata från Skatteverket\n",
+    "# # Test Scenario 1 där input är hyra, antal kvadratmeter och värdeår\n",
+    "# # sqm_price_X_train, sqm_price_X_test, sqm_price_y_train, sqm_price_y_test = train_test_split(male_X, male_y, test_size = 0.2, random_state= 42\n",
+    "# def GetRentClassificationPerColumn():\n",
+    "#     rentClasses = []\n",
+    "#     for i in sqmForValueYearCol:\n",
+    "#         print(i)\n",
+    "#         r = ClassifyRent(builtYear, i)\n",
+    "#         print(r)\n",
+    "#         rentClasses.append(r)\n",
+    "#     return rentClasses\n",
+    "    \n",
+    "# sqmForValueYearCol = GetRentPerYearPerSqmColumn(builtYear, skvData)\n",
+    "# rentClassifications = GetRentClassificationPerColumn(sqmForValueYearCol)\n",
+    "\n",
+    "# x_train, x_test, y_train, y_test = train_test_split(sqmForValueYearCol, rentClassifications, test_size = 0.2, random_state= 42)\n",
+    "\n",
+    "# accuracy = accuracy_score(y_test, predictions)\n",
+    "\n",
+    "# accuracy"
    ]
   }
  ],
