--- a/Projektinlämning_del_1/Notebook.ipynb
+++ b/Projektinlämning_del_1/Notebook.ipynb
@@ -556,7 +556,209 @@
    "source": [
     "Testa resultatet\n",
     "\n",
-    "Eftersom det är jag som har klassificerat hyresnivåerna samt tar fram värdeåret så har jag ingen \"sanning\" att kontrollera emot. Därför är testet nedanför inte givande och utkommenterat."
+    "Eftersom det är jag som har klassificerat hyresnivåerna samt tar fram värdeåret så har jag ingen \"sanning\" att kontrollera emot. Därför är koden nedanför utkommenterad.\n",
+    "\n",
+    "Men vi kan jämföra KNeighbour-modellen med den klassificering vi redan gjort, bara för att låtsas att vi hade värdena från början och skulle skapa en modell som approximerade \"sanningen\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n",
+      "X\n",
+      "(1954,)\n",
+      "y\n",
+      "(1954,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import pandas\n",
+    "# import numpy as np\n",
+    "\n",
+    "# valueYears = [1929, 1930, 1950, 1960, 1970, 1980, 1990, 1995, 1998, 2001, 2004, 2007, 2010, 2013, 2016, 2019]\n",
+    "\n",
+    "# # Definierade gränser och klasser för hyres-nivåer\n",
+    "# ranges = [10, 35, 65, 90]\n",
+    "# rentLevels = ['Mycket låg', 'Låg', 'Medelhög', 'Hög', 'Mycket hög']\n",
+    "\n",
+    "# def GetRentPerYearPerSqmColumn(builtYear, X):\n",
+    "#     if(builtYear <= 1929):\n",
+    "#         return skvData['vardear 1929']\n",
+    "#     elif(builtYear >= 1930 and builtYear < 1950):\n",
+    "#         return skvData['vardear 1930']\n",
+    "#     elif(builtYear >= 1950 and builtYear < 1960):\n",
+    "#         return skvData['vardear 1950']\n",
+    "#     elif(builtYear >= 1960 and builtYear < 1970):\n",
+    "#         return skvData['vardear 1960']\n",
+    "#     elif(builtYear >= 1970 and builtYear < 1980):\n",
+    "#         return skvData['vardear 1970']\n",
+    "#     elif(builtYear >= 1980 and builtYear < 1990):\n",
+    "#         return skvData['vardear 1980']\n",
+    "#     elif(builtYear >= 1990 and builtYear < 1995):\n",
+    "#         return skvData['vardear 1990']\n",
+    "#     elif(builtYear >= 1995 and builtYear < 1998):\n",
+    "#         return skvData['vardear 1995']\n",
+    "#     elif(builtYear >= 1998 and builtYear < 2001):\n",
+    "#         return skvData['vardear 1998']\n",
+    "#     elif(builtYear >= 2001 and builtYear < 2004):\n",
+    "#         return skvData['vardear 2001']\n",
+    "#     elif(builtYear >= 2004 and builtYear < 2007):\n",
+    "#         return skvData['vardear 2004']\n",
+    "#     elif(builtYear >= 2007 and builtYear < 2010):\n",
+    "#         return skvData['vardear 2007']\n",
+    "#     elif(builtYear >= 2010 and builtYear < 2013):\n",
+    "#         return skvData['vardear 2010']\n",
+    "#     elif(builtYear >= 2013 and builtYear < 2016):\n",
+    "#         return skvData['vardear 2013']\n",
+    "#     elif(builtYear >= 2016 and builtYear < 2019):\n",
+    "#         return skvData['vardear 2016']\n",
+    "#     else:\n",
+    "#         return skvData['vardear 2019']\n",
+    "    \n",
+    "# def GetRentLevel(rentRanges, rentPerSqm):\n",
+    "#     level = None\n",
+    "#     #print(f'GetRentLevel: {rentRanges}')\n",
+    "#     for i, value in enumerate(rentRanges):\n",
+    "#         if(rentPerSqm <= value):\n",
+    "#             #print(f'rentPerSqm <= value: {value}')\n",
+    "#             level = rentLevels[i]\n",
+    "#             break\n",
+    "\n",
+    "#     if(level is None):\n",
+    "#     # Hyran var alltså inte lägre än någon av gränsvärdena, alltså tillhör den de högsta 10% av hyror\n",
+    "#         #print(f'Det var en hög hyra!')\n",
+    "#         level = rentLevels[len(rentLevels)-1]\n",
+    "\n",
+    "#     return level\n",
+    "\n",
+    "# def CalculateRentRanges(dataColumn):\n",
+    "#     rentLimits = []\n",
+    "#     for i, value in enumerate(ranges):\n",
+    "#         rentLimits.append(dataColumn.quantile(value/100))\n",
+    "#     #print(rentLimits)\n",
+    "#     return rentLimits\n",
+    "\n",
+    "# def ClassifyRent(builtYear, rentPerSqm, rentRanges):\n",
+    "#     # Jämför hyran för givet värdeår med hyresnivån i riket\n",
+    "#     #print(f'ValueYear:  {builtYear}, RentRanges: {rentRanges}')\n",
+    "#     rentLevel = GetRentLevel(rentRanges, rentPerSqm)\n",
+    "\n",
+    "#     return rentLevel\n",
+    "\n",
+    "# def GetRentClassificationColumnForValueYear(valueYear, column, rentRanges):\n",
+    "#     classificationList = []\n",
+    "#     for sqmYearlyRent in column:\n",
+    "#         classification = ClassifyRent(valueYear, sqmYearlyRent, rentRanges)\n",
+    "#         classificationList.append(classification)\n",
+    "#     #print(classificationList)\n",
+    "#     return classificationList\n",
+    "\n",
+    "# skvData = pandas.read_csv('Data/SKV_Genomsnittshyra_bostad_2022-2024.csv')\n",
+    "\n",
+    "# for valueYear in valueYears:\n",
+    "#     #print(valueYear)    \n",
+    "#     column = GetRentPerYearPerSqmColumn(valueYear, skvData)\n",
+    "#     rentRanges = CalculateRentRanges(column)\n",
+    "#     skvData.loc[:, f'Rent Level {valueYear}'] = GetRentClassificationColumnForValueYear(valueYear, skvData[f'vardear {valueYear}'], rentRanges)\n",
+    "#     skvData.loc[:, f'{valueYear}'] = [valueYear] * len(skvData)\n",
+    "# #print(skvData['Rent Level 1929'])\n",
+    "\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "for valueYear in valueYears:\n",
+    "    valueYear_X = skvData[f'vardear {valueYear}']\n",
+    "    valueYear_y = skvData[f'Rent Level {valueYear}']\n",
+    "\n",
+    "    # Dela upp i tränings-data och test-data\n",
+    "    valueYear_X_train, valueYear_X_test, valueYear_y_train, valueYear_y_test = train_test_split(valueYear_X,valueYear_y, test_size = 0.2, random_state= 42)\n",
+    "\n",
+    "    print('X')\n",
+    "    print(valueYear_X)\n",
+    "    print('y')\n",
+    "    print(valueYear_y)\n",
+    "\n",
+    "    # # Träna modellen\n",
+    "    # sk_clf = KNeighborsClassifier()\n",
+    "    # sk_clf.fit(valueYear_X_train, valueYear_y_train)\n",
+    "\n",
+    "    # # Predict\n",
+    "    # predictions = sk_clf.predict(valueYear_X_test)\n",
+    "    # print('My predictions:')\n",
+    "    # predictions\n",
+    "\n",
+    "    # # Kolla hur bra resultatet blev\n",
+    "    # from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "    # accuracy = accuracy_score(valueYear_y_test, predictions)\n",
+    "    # print('My achieved accuracy:')\n",
+    "    # accuracy"
    ]
   },
   {
