Förtydliga det är både del 1 och del 2, i samma fil!

--- a/Projektinlämning_del_1/Notebook.ipynb
+++ b/Projektinlämning_del_1/Notebook.ipynb
@@ -97,7 +97,16 @@
    "metadata": {},
    "source": [
     "Konklusion: Där är inga värden i datan som är None i alla fall.\n",
-    "Nästa steg: Kolla om där finns extrem-värden (outliers) som ska tas bort före modellen tränas. För varje värdeår finns det några hyror som är högre än andra, men modellen tar inte hänsyn till max-hyror utan klassificerar endast hyran som mycket hög i de fallen, därför menar jag att dessa värden inte behöver tas bort i detta fall."
+    "Nästa steg: Kolla om där finns extrem-värden (outliers) som ska tas bort före modellen tränas. För varje värdeår finns det några hyror som är högre än andra, men modellen tar inte hänsyn till max-hyror utan klassificerar endast hyran som mycket hög i de fallen, därför menar jag att dessa värden inte behöver tas bort i detta fall.\n",
+    "\n",
+    "Visualisering: Jag har visualiserat datan genom att använda mig rikligt av print i koden, som efterföljande kommenterats ut för att ge bättre översikt över resultaten. Jag har också, efter min första klassificering av hyresnivån, visualiserat klassificeringen genom att rita datan i en plot."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Projektinlämning del 2 - implementation av AI modell"
    ]
   },
   {
