Uppdatera text lite

--- a/Projektinlämning_del_1/Notebook.ipynb
+++ b/Projektinlämning_del_1/Notebook.ipynb
@@ -6,42 +6,49 @@
    "source": [
     "# Projektinlämning del 1 - Beskrivning av problem\n",
     "\n",
-    "1. Klassificeringsproblem.\n",
+    "## 1. Klassificeringsproblem.\n",
+    "\n",
     "Många som hyr sin bostad undrar om de betalar för mycket i hyra för sin bostad. För att få veta om de betalar mycket eller lite i hyra jämfört med liknande hyresbostäder låter vi maskin inlärning läsa in och processa data gällande genomsnittshyror för hyresrätter 2022-2024 för hela riket. Datan kommer från Skatteverket. Baserat på datan låter vi maskinen besluta om den nuvarande hyran är mycket låg, låg, medelhög, hög eller mycket hög beroende på bostadens värdeår. \n",
     "\n",
     "(Då den ansvarige för Skatteverkets CSV-fil är på semester och dokumentation för filen saknas så kan tyvärr inte hänsyn tas till värdeområdes-numrena. Dessa skulle idealt ha mappats till ett område och tagits hänsyn till i förutsägelsen om hyrans storlek.)\n",
     "\n",
-    "Indata\n",
+    "### Indata\n",
+    "\n",
     "Månadshyra\n",
     "Antal kvadratmeter\n",
     "Värdeår\n",
     "\n",
-    "Vi gör detta till ett klassifficeringsproblem där vi vill få ut en hyresnivå tillhörande en av kategorierna\n",
+    "### Utdata (hyresnivå tillhörande en av kategorierna)\n",
+    "\n",
     "Mycket låg\n",
     "Låg\n",
     "Medel\n",
     "Hög\n",
     "Mycket hög\n",
     "\n",
-    "Vi använder intervallen för hyror:\n",
+    "### Vi använder intervallen för hyror:\n",
+    "\n",
     "Lägsta 10 % innebär mycket låg hyra\n",
     "10-35% innebär låg hyra \n",
     "35-65% innebär medelhög hyra\n",
     "65-90% innebär hög hyra\n",
     "90-100% innebär mycket hög hyra\n",
     "\n",
-    "2. Klassificeringsproblem.\n",
+    "## 2. Klassificeringsproblem.\n",
+    "\n",
     "Om användaren vill veta vilket värdeår bostaden bör tillhöra, beroende på hyresnivån och antalet kvadratmeter bostaden är, kan denne göra detta genom att sätta värdeåret till None.\n",
     "Om angiven bostad får en hyra med medelhög nivå för något värdeår används detta värdeår. Om flera värdeår matchar hyran ges det äldsta värdeåret som sannolikt värdeår, för att inte göra användaren besviken i onödan.\n",
     "\n",
-    "Input från användaren, hårdkodat i koden nedanför då input inte funkade in notebooks av någon anledning:\n",
+    "### Input från användaren, hårdkodat i koden nedanför då input inte funkade in notebooks av någon anledning:\n",
+    "\n",
     "Månadshyra\n",
     "Antal kvadratmeter\n",
     "\n",
-    "Utdata\n",
+    "### Utdata\n",
+    "\n",
     "Värdeår\n",
     "\n",
-    "Beskrivning av datan i Skatteverkets CSV-fil\n",
+    "## Beskrivning av datan i Skatteverkets CSV-fil\n",
     "Värdeår_XYZW är fastighetens värdeår, vilket normalt sett innebär det år då fastigheten färdigställdes.\n",
     "Talen är hyran i kr/(år och kvm)"
    ]
@@ -96,10 +103,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Konklusion: Där är inga värden i datan som är None i alla fall.\n",
-    "Nästa steg: Kolla om där finns extrem-värden (outliers) som ska tas bort före modellen tränas. För varje värdeår finns det några hyror som är högre än andra, men modellen tar inte hänsyn till max-hyror utan klassificerar endast hyran som mycket hög i de fallen, därför menar jag att dessa värden inte behöver tas bort i detta fall.\n",
+    "## Konklusion\n",
     "\n",
-    "Visualisering: Jag har visualiserat datan genom att använda mig rikligt av print i koden, som efterföljande kommenterats ut för att ge bättre översikt över resultaten. Jag har också, efter min första klassificering av hyresnivån, visualiserat klassificeringen genom att rita datan i en plot."
+    "Där är inga värden i datan som är None i alla fall.\n",
+    "\n",
+    "## Outliers\n",
+    "\n",
+    "Kontroll om där finns extrem-värden (outliers) som måste tas bort före modellen tränas. För varje värdeår finns det några hyror som är högre än andra, men modellen tar inte hänsyn till max-hyror utan klassificerar endast hyran som mycket hög eller mycket låg i de fallen och påverkar knappt gränsvärdena i modellen då de måste utgöra 10% för att påverka övre eller undre gränsen, därför menar jag att dessa värden inte behöver tas bort i detta fall.\n",
+    "\n",
+    "## Visualisering\n",
+    "\n",
+    "Jag har visualiserat datan genom att använda mig rikligt av print i koden, som efterföljande kommenterats ut för att ge bättre översikt över resultaten. Jag har också, efter min första klassificering av hyresnivån, visualiserat klassificeringen genom att rita datan i en plot."
    ]
   },
   {
@@ -349,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Testa resultatet\n",
+    "## Testa resultatet\n",
     "\n",
     "Eftersom det är jag som har klassificerat hyresnivåerna samt tar fram värdeåret så har jag ingen \"sanning\" att kontrollera emot.\n",
     "\n",
@@ -417,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Eftersom modellen endast har en variabel per värdeår, nämligen årshyra per kvadratmeter, blir klassificeringen 1.0 eller väldigt nära 1.0 för alla värdeår. Hade modellen haft fler variabler hade sannolikt resultaten varierat mer."
+    "Eftersom modellen endast har en variabel per värdeår, nämligen årshyra per kvadratmeter, blir klassificeringen 1.0 eller väldigt nära 1.0 för alla värdeår. Hade modellen haft fler variabler hade sannolikt resultaten varierat mer mellan 2 olika modeller."
    ]
   }
  ],
