--- a/Projektinlämning_del_1/Notebook.ipynb
+++ b/Projektinlämning_del_1/Notebook.ipynb
@@ -14,25 +14,25 @@
     "\n",
     "### Indata\n",
     "\n",
-    "Månadshyra\n",
-    "Antal kvadratmeter\n",
-    "Värdeår\n",
+    "* Månadshyra\n",
+    "* Antal kvadratmeter\n",
+    "* Värdeår\n",
     "\n",
     "### Utdata (hyresnivå tillhörande en av kategorierna)\n",
     "\n",
-    "Mycket låg\n",
-    "Låg\n",
-    "Medel\n",
-    "Hög\n",
-    "Mycket hög\n",
+    "* Mycket låg\n",
+    "* Låg\n",
+    "* Medel\n",
+    "* Hög\n",
+    "* Mycket hög\n",
     "\n",
     "### Vi använder intervallen för hyror:\n",
     "\n",
-    "Lägsta 10 % innebär mycket låg hyra\n",
-    "10-35% innebär låg hyra \n",
-    "35-65% innebär medelhög hyra\n",
-    "65-90% innebär hög hyra\n",
-    "90-100% innebär mycket hög hyra\n",
+    "* Lägsta 10 % innebär mycket låg hyra\n",
+    "* 10-35% innebär låg hyra \n",
+    "* 35-65% innebär medelhög hyra\n",
+    "* 65-90% innebär hög hyra\n",
+    "* 90-100% innebär mycket hög hyra\n",
     "\n",
     "## 2. Klassificeringsproblem.\n",
     "\n",
@@ -41,16 +41,16 @@
     "\n",
     "### Input från användaren, hårdkodat i koden nedanför då input inte funkade in notebooks av någon anledning:\n",
     "\n",
-    "Månadshyra\n",
-    "Antal kvadratmeter\n",
+    "* Månadshyra\n",
+    "* Antal kvadratmeter\n",
     "\n",
     "### Utdata\n",
     "\n",
-    "Värdeår\n",
+    "* Värdeår\n",
     "\n",
     "## Beskrivning av datan i Skatteverkets CSV-fil\n",
-    "Värdeår_XYZW är fastighetens värdeår, vilket normalt sett innebär det år då fastigheten färdigställdes.\n",
-    "Talen är hyran i kr/(år och kvm)"
+    "* Värdeår_XYZW är fastighetens värdeår, vilket normalt sett innebär det år då fastigheten färdigställdes.\n",
+    "* Talen är hyran i kr/(år och kvm)"
    ]
   },
   {
