Uppdatera markdown igen

--- a/Projektinlämning_del_1/Notebook.ipynb
+++ b/Projektinlämning_del_1/Notebook.ipynb
@@ -36,8 +36,8 @@
     "\n",
     "## 2. Klassificeringsproblem.\n",
     "\n",
-    "Om användaren vill veta vilket värdeår bostaden bör tillhöra, beroende på hyresnivån och antalet kvadratmeter bostaden är, kan denne göra detta genom att sätta värdeåret till None.\n",
-    "Om angiven bostad får en hyra med medelhög nivå för något värdeår används detta värdeår. Om flera värdeår matchar hyran ges det äldsta värdeåret som sannolikt värdeår, för att inte göra användaren besviken i onödan.\n",
+    "Om användaren vill veta vilket värdeår bostaden bör tillhöra, beroende på hyresnivån och antalet kvadratmeter bostaden är, kan denne göra detta.\n",
+    "Om angiven bostad får en hyra med medelhög nivå för något värdeår används detta värdeår. Om flera värdeår matchar hyran ges det äldsta värdeåret som sannolikt värdeår, för att inte göra användaren besviken i onödan. Om hyran inte ligger i medel-segmentet för något värdeår så meddelas användaren att värdeåret uppskattats till Okänt, då vi inte kan dra någon konklusion om huruvida bostaden är gammal eller ny.\n",
     "\n",
     "### Input från användaren, hårdkodat i koden nedanför då input inte funkade in notebooks av någon anledning:\n",
     "\n",
